err/djazator.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djazator'...
Listing './lib/python3.5/site-packages/djazator/templatetags'...
Listing './lib/python3.5/site-packages/djazator-0.2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzmq-2.2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sockjs'...
Listing './lib/python3.5/site-packages/sockjs/tornado'...
Listing './lib/python3.5/site-packages/sockjs/tornado/transports'...
Listing './lib/python3.5/site-packages/sockjs_tornado-1.0.0.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-2.4.1.egg-info'...
Listing './lib/python3.5/site-packages/zmq'...
Listing './lib/python3.5/site-packages/zmq/core'...
Listing './lib/python3.5/site-packages/zmq/devices'...
Listing './lib/python3.5/site-packages/zmq/eventloop'...
Listing './lib/python3.5/site-packages/zmq/eventloop/platform'...
Listing './lib/python3.5/site-packages/zmq/green'...
Compiling './lib/python3.5/site-packages/zmq/green/core.py'...
***   File "./lib/python3.5/site-packages/zmq/green/core.py", line 117
    except gevent.Timeout, t:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zmq/log'...
Listing './lib/python3.5/site-packages/zmq/ssh'...
Listing './lib/python3.5/site-packages/zmq/tests'...
Listing './lib/python3.5/site-packages/zmq/utils'...
Listing './lib/python3.5/site-packages/zmq/web'...
Listing './share'...
Listing './share/python-wheels'...
